--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,4 @@ jobs:
           local-dir: ./dist/
           server-dir: public_html/
           dangerous-clean-slate: false
+          log-level: verbose
